<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="uk.ac.surrey.bets_framework.NewTicketActivity">

        <include
            android:id="@+id/new_ticket_bar"
            layout="@layout/top_app_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/t_new_ticket_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="164dp"
            android:text="@string/l_nuevo_tiquete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_ticket_bar"
            android:textAppearance="@style/title"/>

        <TextView
            android:id="@+id/t_opciones_transporte"
            style="@style/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/l_opciones_transporte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_new_ticket_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_transmilenio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorTransmilenioSoft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_opciones_transporte">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/t_transmilenio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/l_transmilenio"
                        android:textAppearance="@style/transport_options" />

                    <TextView
                        android:id="@+id/t_transmilenio_valor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/l_transmilenio_valor"
                        android:textAppearance="@style/transport_fares" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkbox_transmilenio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:buttonTint="@color/white" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_sitp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorSitpSoft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_transmilenio">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/t_sitp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/l_sitp"
                        android:textAppearance="@style/transport_options" />

                    <TextView
                        android:id="@+id/t_sitp_valor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/l_sitp_valor"
                        android:textAppearance="@style/transport_fares" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkbox_sitp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:buttonTint="@color/white" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_metro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorMetroSoft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_sitp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/t_metro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/l_metro"
                        android:textAppearance="@style/transport_options" />

                    <TextView
                        android:id="@+id/t_metro_valor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/l_metro_valor"
                        android:textAppearance="@style/transport_fares" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkbox_metro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:buttonTint="@color/white" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_tren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorTrenSoft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_metro">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/t_transmicable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/l_tren"
                        android:textAppearance="@style/transport_options" />

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkbox_tren"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:scaleX="2"
                    android:scaleY="2"
                    app:buttonTint="@color/white" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/icon_helper"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="Icono de aclaración"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_tren"
            app:srcCompat="@drawable/exclamacion" />

        <TextView
            android:id="@+id/l_aclaracion"
            style="@style/paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/l_aclaracion_tren"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_helper"
            app:layout_constraintTop_toBottomOf="@+id/card_tren" />

        <Button
            android:id="@+id/b_seleccionar_transporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/b_continuar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_aclaracion" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

